syntax = "proto3";
package faucet;

import "cosmos_proto/cosmos.proto";
import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/interchainberlin/pooltoy/x/faucet/types";

// Query defines the gRPC querier service for the faucet module.
service Query {
      // WhenBrr queries the last time an address minted
    rpc QueryWhenBrr(QueryWhenBrrRequest) returns (QueryWhenBrrResponse) {
        option (google.api.http).get = "/whenBrr/{address}";
    }

    rpc QueryEmojiRank(QueryEmojiRankRequest) returns (QueryEmojiRankResponse){}
}

message QueryWhenBrrRequest {
    string address = 1;
}

message QueryWhenBrrResponse {
    int64 timeLeft = 1;
}

message QueryEmojiRankRequest {
    int64 showNum = 1;
}

message QueryEmojiRankResponse {
    repeated Amount rank = 1;
}

message Amount {
    string address = 1;
    int64 total = 2;
}
